# gn-kernels

./: .gitignore  README.md  benchmark_attn.py  benchmark_mm.py  benchmark_sol.py  benchmark_sol_modal.py  pyproject.toml  requirements.txt  setup.py
benchmarks/: cuda_mm_sm80.py  nvrtc_mm_sm80.py
csrc/: common.h  cutlass_sm80_int4.cu  host_utils.h
csrc/sm120a/: attn_mxfp8.cu  attn_mxfp8_qk.cu  common.h  cutlass_fp4.cu  cutlass_mm_fp8.cu
csrc/sm80/: attn_int8.cu  attn_int8_qk.cu
csrc/sm89/: cutlass_mm_fp8.cu
gn_kernels/: __init__.py  attn.py  cuda_utils.py  cutlass_mm.py  nvrtc_utils.py  triton_attn.py  triton_mm.py  utils.py
gn_kernels/csrc/: common.h
gn_kernels/csrc/sm120a/: attn_mxfp8_qk.cu
gn_kernels/csrc/sm80/: attn_int8.cu  attn_int8_qk.cu
gn_kernels/cuda_attn/: __init__.py  kernel.cu  kernel_sm80.cu
gn_kernels/cuda_mm/: __init__.py  header.h  kernel.cu  kernel_sm80.cu
gn_kernels/cutedsl/: mm_mxfp8_sm100.py  mm_sm100.py  mm_sm80.py  sm100_mm_bf16.py  sm100_mm_mxfp8.py  sm100_mm_nvfp4.py  sm120_mm.py  sm120_mm_mxfp8.py  sm120_mm_nvfp4.py  sm80_mm.py  sm80_mm_bf16.py
gn_kernels/cutedsl/utils/: __init__.py  _tcgen05.py  mbarrier.py
gn_kernels/hip_mm/: __init__.py  kernel.cu
tests/: test_cuda_attn.py  test_cuda_mm.py  test_triton_attn.py
